2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsdXX.c (grub_netbsd_load_elf_meta):
	Silence spurious warning.
	Reported and tested by: Alain Greppin.

2011-01-07  Szymon Janc <szymon@janc.net.pl>

	* docs/grub.texi (Support automatic decompression): Update with xz
	decompression support.

2011-01-07  Szymon Janc <szymon@janc.net.pl>

	Improve loaders' kernel command line handling.

	* grub-core/lib/cmdline.c: New file.
	* include/grub/lib/cmdline.h: Likewise.
	* grub-core/loader/i386/linux.c (grub_cmd_linux): Use
	grub_create_loader_cmdline to create kernel command line.
	* grub-core/loader/i386/pc/linux.c (grub_cmd_linux): Likewise.
	* grub-core/loader/powerpc/ieee1275/linux.c (grub_cmd_linux): Likewise.
	* grub-core/loader/sparc64/ieee1275/linux.c (grub_cmd_linux): Likewise.
	* grub-core/Makefile.core.def (linux16): Add lib/cmdline.c on i386_pc.
	(linux): Add lib/cmdline.c on common.

2011-01-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (grub_xfs_iterate_dir): Take into account that
	inopos might be unaligned.

2011-01-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Add missing
	endian transformations.
	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Likewise.
	Based on report by: Doug Nazar.

2011-01-07  Doug Nazar  <nazard.michi@gmail.com>

	* grub-core/disk/raid5_recover.c (grub_raid5_recover): Add missing
	array->members[i].start_sector.
	* grub-core/disk/raid6_recover.c (grub_raid6_recover): Likewise.

2011-01-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Handle NetBSD and OpenBSD disklabels.
	Reported and tested by: Grégoire Sutre.

2011-01-06  Colin Watson  <cjwatson@ubuntu.com>

	* tests/util/grub-shell.in: Set serial terminfo type to `dumb', to
	avoid causing test failures by clearing the screen.

2011-01-06  Colin Watson  <cjwatson@ubuntu.com>
