@@ -1,5 +1,16 @@
 2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Satisfy some bison versions need for inttypes.h.
+
+	* grub-core/lib/posix_wrap/inttypes.h: New file.
+	* grub-core/lib/posix_wrap/sys/types.h (int8_t): New type.
+	(int16_t): Likewise.
+	(int32_t): Likewise.
+	(int64_t): Likewise.
+	Reported and tested by: Alain Greppin.
+
+2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/loader/i386/bsdXX.c (grub_netbsd_load_elf_meta):
 	Silence spurious warning.
 	Reported and tested by: Alain Greppin.
